2003-08-11  Paul Eggert  <eggert@twinsun.com>

	* modules/gnu-source, m4/gnu-source.m4:
	Remove; we're assuming Autoconf 2.54 or later now.
	Suggested by Bruno Haible.
	* MODULES.html.sh (func_all_modules): Remove gnu-source.
	
2003-08-08  Paul Eggert  <eggert@twinsun.com>

	* MODULES.html.sh (func_all_modules): Add extensions, gnu-source.
	* modules/extensions, modules/gnu-source: New files.
	* modules/timespec, modules/unlocked-io: Depend on extensions.

2003-08-07 Paul Eggert  <eggert@twinsun.com>

	* modules/restrict: New file.
	* MODULES.html.sh (func_all_modules): Add restrict.
	* modules/regex: Depend on restrict.

2003-08-07  Bruno Haible  <bruno@clisp.org>

	* modules/getndelim2 (Makefile.am): Add the files to EXTRA_DIST, not
	lib_SOURCES, because getndelim2.m4 now uses AC_LIBOBJ(getndelim2).

2003-08-05  Paul Eggert  <eggert@twinsun.com>

	* MODULES.html.sh (func_all_modules): Remove bumpalloc.
	* modules/bumpalloc: Remove.

2003-07-31  Bruno Haible  <bruno@clisp.org>

	* modules/getpass-gnu: New file.
	* MODULES.html.sh (func_all_modules): Add getpass-gnu.

2003-07-22  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc (Depends-on): Add exitfail.
	* modules/xmemcoll: Likewise.

2003-07-20  Jim Meyering  <jim@meyering.net>

	* modules/closeout (Depends-on): Add exitfail.
	Suggestion from Bruno Haible.

2003-07-18  Bruno Haible  <bruno@clisp.org>

	* modules/getndelim2: New file.
	* modules/getline: Share files with module getndelim2.
	* modules/getnline: Depend on getndelim2 instead of sharing files with
	it. Add getnline.c to lib_SOURCES.
	* MODULES.html.sh (func_all_modules): Add getndelim2.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* modules/getnline: New file.
	* modules/getline: Add lib/getndelim2.c to source file list.
	* MODULES.html.sh (func_all_modules): Add getnline.

2003-07-17  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove file.
	* Makefile.in: Remove file.

2003-07-17  Bruno Haible  <bruno@clisp.org>
