@@ -1,5 +1,8 @@
 2003-08-12  Paul Eggert  <eggert@twinsun.com>
 
+	Merge from coreutils
+	* euidaccess.m4 (gl_FUNC_EUIDACCESS): Check for euidaccess decl.
+
 	* lib-ld.m4, lib-link.m4, lib-prefix.m4: Regenerate from gettext
 	0.12.1.  These files are now being upgraded automatically by
 	../config/srclist-update.
